--- a/index.html
+++ b/index.html
@@ -24,6 +24,38 @@
       </script>
 </head>
 <body>
+    <!-- Main Content -->
+     <main class="max-w-screen-xi mx-auto px-16 lg:px-28">
+        <!-- Header Section -->
+         <header class="flex pt-10 mb-20">
+            <!-- Text Content -->
+             <div class="space-y-4">
+                <h1 class="text-6xl font-bold">
+                    It's good <br> tea time at The <br> Tea House
+                </h1>
+                <p class="text-gray-500 w-3/4 py-2.5">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button class="bg-gradient-to-r from-orange-500 to-red-500 px-4 py-2 rounded text-white font-bold">Explore More <i class="fas fa-arrow-right -rotate-45"></i></button>
+             </div>
+             <!-- Image Content -->
+              <div class="relative">
+                <!-- Image -->
+                 <div>
+                    <img class="w-full" src="images/banner.png" alt="Banner image">
+                 </div>
+                 <!-- Card -->
+                  <div class="flex items-center bg-white shadow-lg p-2 md:px-5 md:py-4 space-x-2 absolute top-28 lg:top-80 md:left-28">
+                    <div>
+                      <i class="fas fa-star text-2xl text-amber-300"></i>
+                    </div>
+                    <div>
+                      <h2 class="font-bold text-2xl">5.00</h2>
+                      <p>Trust Pilot Ratings</p>
+                    </div>
+                  </div>
+              </div>
+         </header>
+
+     </main>
   
     
 
